# runner

./: .gitattributes  .gitignore  AGENTS.md  CDrive-Cleanup.cmd  CLAUDE.md  GEMINI.md  PROJECT_AGENT_RULES.md  README.md  SCHEDULE_AUDIT.md  SKILLS.md  package-lock.json  package.json  pyproject.toml  start-dev.cmd  start-dev.ps1  tsconfig.json  vite.training.config.ts  一鍵更新網站資料.cmd  匯出手冊PDF.cmd  半馬重建訓練計畫_進階互動版_v7_最終收尾版.html  啟動 Runner Garmin 同步器.cmd  更新 Runner Garmin 授權.cmd  產生收款SVG.cmd
.github/: schedule-audit.json  workflow-run-monitor.json
_ai/: AGENT_DECISION_TREE.md  AGENT_EVOLUTION_LOOP.md  EXISTING_PROJECT_TOKEN_RETROFIT.md  INDEX.md  MEMORY_LAYERS.md  MY_DEFAULT_RULES.md  NEW_PROJECT_TOKEN_SETUP.md  PROJECT_RULES_INTAKE.md  PROMPT_MACROS.md  REFLECTION_AND_GATES.md  RUNBOOK_race_data_truth.md  TASK_ROUTING.md  TOKEN_EFFICIENCY.md  TOKEN_ROLLOUT_PLAYBOOK.md  VERIFY.md
docs/: GARMIN_TRAINING_API_APPLICATION.md
runner/: runner-training-backup-2026-07-19.json  歡迎.md
scripts/: Clean-CDrive-Menu.ps1  Clean-CDrive.ps1  apply-manual-overrides.mjs  automation-orchestrator.mjs  build-announcements.mjs  build-automation-health.mjs  build-favicons.ps1  build-message-cloud.mjs  build-operational-dashboard.mjs  build-payment-sheet.mjs  build-trainer-weather.mjs  build-training-review.mjs  collect-content-candidates.mjs  config.py  debug_sites.py  enrich-official-race-data.mjs  enrich_platforms.py  export-handbook-pdf.cjs  http_client.py  init-manual-overrides-xlsx.mjs  init-payment-xlsx.mjs  main.py  obsidian_writer.py  publish-content.mjs  publish-live-site.mjs  (+14 more)
(+162 files in other folders)
